test/fixtures/type-error/scope-error.lys
// this will be fixed once let constructs are implemented in the scope side
var a = a